--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="stylesheet" href="app.css">
     <meta charset="utf-8">
     <title>BB</title>
   </head>
   <body>
+    <header>
+      <div class="container">
+        <div class="navbar">
+          <div class="container">
+            <div class="card_left">
+
+            </div>
+            <div class="card_right">
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
 
   </body>
 </html>
