--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
     <header>
+    <div class="hero" image="img/BusinessBoutique_Courses_HeroImage.jpg">
+
       <div class="container">
         <div class="navbar">
           <div class="container">
@@ -19,6 +21,7 @@
           </div>
         </div>
       </div>
+    </div>
     </header>
 
   </body>
