--- a/index.html
+++ b/index.html
@@ -7,10 +7,23 @@
   </head>
   <body>
     <header>
-    <div class="hero" image="img/BusinessBoutique_Courses_HeroImage.jpg">
+    <div class="hero">
 
       <div class="container">
-        <div class="navbar">
+        <div class="navbar_left">
+
+        </div>
+        <div class="navbar_right">
+            <ul>
+              <a href="About">About</a>
+              <a href="Courses">Courses</a>
+              <a href="Academy">Academy</a>
+              <a href="Book">Book</a>
+              <a href="Podcast">Podcast</a>
+              <a href="Blog">Blog</a>
+              <a href="Event">Event</a>
+              <a href="Store">Store</a>
+            </ul>
           <div class="container">
             <div class="card_left">
 
