--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta charset="utf-8">
     <title>BB</title>
   </head>
-  <body>
+  <body class="body">
     <header>
-    <div class="hero">
 
       <div class="container">
         <div class="navbar_left">
@@ -24,6 +23,10 @@
               <a href="Event">Event</a>
               <a href="Store">Store</a>
             </ul>
+          </div>
+        </div>
+          </header>
+          <div class="hero">
           <div class="container">
             <div class="card_left">
 
@@ -33,9 +36,7 @@
             </div>
           </div>
         </div>
-      </div>
-    </div>
-    </header>
+
 
   </body>
 </html>
