--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
           </div>
         </div>
           </header>
+          <section>
+
           <div class="hero">
           <div class="container">
             <div class="card_left">
@@ -36,6 +38,7 @@
             </div>
           </div>
         </div>
+      </section>
 
 
   </body>
