set body margin 0

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <link rel="stylesheet" href="app.css">
     <meta charset="utf-8">
-    <title>BB</title>
+    <title>BB Page</title>
   </head>
   <body class="body">
     <header>
 
-      <div class="container">
+      <div class="container-navbar">
         <div class="navbar_left">
 
         </div>
@@ -26,10 +26,10 @@
           </div>
         </div>
           </header>
-          <section>
+          <div class="">
 
           <div class="hero">
-          <div class="container">
+          <div class="container-card">
             <div class="card_left">
 
             </div>
@@ -38,7 +38,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </div>
 
 
   </body>
