refactor nav and header

--- a/index.html
+++ b/index.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
+<html lang="en">
     <link rel="stylesheet" href="app.css">
+  <head>
     <meta charset="utf-8">
     <title>BB Page</title>
   </head>
-  <body class="body">
-    <header>
+  <body>
 
-      <div class="container-navbar">
-        <div class="navbar_left">
 
-        </div>
-        <div class="navbar_right">
-            <ul>
-              <a href="About">About</a>
-              <a href="Courses">Courses</a>
-              <a href="Academy">Academy</a>
-              <a href="Book">Book</a>
-              <a href="Podcast">Podcast</a>
-              <a href="Blog">Blog</a>
-              <a href="Event">Event</a>
-              <a href="Store">Store</a>
-            </ul>
+        <header>
+          <img src="http://placekitten.com/100/100" alt="">
+            <nav>
+              <a class="nav_link" href="About">About</a>
+              <a class="nav_link" href="Courses">Courses</a>
+              <a class="nav_link" href="Academy">Academy</a>
+              <a class="nav_link" href="Book">Book</a>
+              <a class="nav_link" href="Podcast">Podcast</a>
+              <a class="nav_link" href="Blog">Blog</a>
+              <a class="nav_link" href="Event">Event</a>
+              <a class="nav_link" href="Store">Store</a>
+            </nav>
+        </header>
+
+        <section>
+
+    <div class="hero">
+
           </div>
-        </div>
-          </header>
-          <div class="">
-
-          <div class="hero">
           <div class="container-card">
             <div class="card_left">
 
@@ -37,9 +35,8 @@
 
             </div>
           </div>
-        </div>
-      </div>
 
 
+        </section>
   </body>
 </html>
