--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             </nav>
         </header>
 
-        <section>
-
-    <div class="hero">
+        <section class="hero">
+          <img src="img/BusinessBoutique_Courses_HeroImage_Mobile.jpg" alt="">
+    <div class="hero_grid">
 
           </div>
           <div class="container-card">
