remove unused div and add text to card

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
 
 
-        <header>
+        <header class="header">
           <img src="http://placekitten.com/100/100" alt="">
             <nav>
               <a class="nav_link" href="About">About</a>
@@ -22,14 +22,12 @@
             </nav>
         </header>
 
-        <section class="hero">
-    
-    <div class="hero_grid">
-
-          </div>
+        <div class="hero"></div>
           <div class="container-card">
             <div class="card_left">
-
+              <ul>
+                <li>Some Text</li>
+              </ul>
             </div>
             <div class="card_right">
 
@@ -37,6 +35,5 @@
           </div>
 
 
-        </section>
   </body>
 </html>
