nav bar/ set flex and justify content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
         <header class="header">
-          <img src="http://placekitten.com/100/100" alt="">
+          <img class="logo" src="http://placekitten.com/100/100" alt="">
             <nav>
               <a class="nav_link" href="About">About</a>
               <a class="nav_link" href="Courses">Courses</a>
