--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
         <header class="header">
           <img class="logo" src="http://placekitten.com/100/100" alt="">
-            <nav>
+            <nav class="logo">
               <a class="nav_link" href="About">About</a>
               <a class="nav_link" href="Courses">Courses</a>
               <a class="nav_link" href="Academy">Academy</a>
